var-template/06-ingress-tls-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gsc-gateway
  namespace: geoserver-cloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - geovm.wri-indonesia.id
      secretName: geoservercloud-tls
  rules:
    - host: geovm.wri-indonesia.id
      http:
        paths:
          - path: /geoserver-cloud
            pathType: Prefix
            backend:
              service:
                name: gsc-gsc-gateway
                port:
                  number: 8080
